@@ -1,5 +1,6 @@
 <!-- ###FULLDOC### begin -->
 			<h3>###TITLE###</h3>
+			<p id="linkvalidator_firstSteps">###FIRST_STEPS###</p>
 			<div class="linkvalidator_funcmenu">###FUNC_MENU######REFRESH######UPDATE###</div>
 			<div class="linkvalidator_checkoptions">
 				###ID###
