@@ -4,6 +4,10 @@
 	display: inline;
 }
 
+#linkvalidator_firstSteps {
+	margin-bottom: 10px;
+}
+	
 .linkvalidator_funcmenu {
 	margin-bottom: 25px;
 }
